<resources>
    <string name="app_name">Parking</string>
    <string name="hello">Welcome to Parking!</string>
    <string name="help">To move tabs just scroll them</string>
    <string name="go">Get started!</string>
    <string name="fill">All fields required not to be empty!</string>
    <string name="check">Please, make sure all fields have the correct input!</string>
    <string name="no_hint">Input hint disabled!</string>
    <string name="undo">Undo</string>
    <string name="no_cars">Cars not founded</string>
    <string name="no_cars_message">There are no cars added. Would you like to continue?</string>
    <string name="no_cars_add">There are no cars founded. You can add them from \"Garage\" menu</string>
    <string name="no_cars_garage">There are no cars added. Would you like to add some?</string>
    <string name="allowed_chars">АБВГДЕЁЖЗИЙКЛМНОПРСТУФХЦЧШЩЫЬЪЫЮЯабвгдеёжзийклмнопрстуфхцчшщъьыэюяABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz</string>

    //GUI
    <string name="name">First Name</string>
    <string name="date">Date of Birth</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="deleteCar">Delete</string>
    <string name="age_pickness">Date of Birth</string>
    <string name="car_name">Car name</string>
    <string name="car_id">Licence plate</string>
    <string name="licence_plate">Licence plate</string>
    <string name="add">Add One More Car</string>
    <string name="no_template">Disable templates</string>
    <string name="no_template_message">You can disable licence plate templates by long pressing on this field</string>
    <string name="permission_yes">Provide</string>
    <string name="permission_no">Settings</string>
    <string-array name="countries">
        <item>Russian Federation</item>
        <item>Republic of Belarus</item>
        <item>Ukraine</item>
        <item>Kazakhstan</item>
        <item>Other</item>
    </string-array>
    <string-array name="hours">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>3 hours</item>
        <item>4 hours</item>
        <item>5 hours</item>
        <item>6 hours</item>
        <item>7 hours</item>
        <item>8 hours</item>
        <item>9 hours</item>
        <item>10 hours</item>
        <item>11 hours</item>
        <item>12 hours</item>
    </string-array>
    <string name="payment">Pay for parking</string>
    <string name="parkingNumber">Parking number</string>
    <string name="manage">Manage</string>
    <string name="myGarage">My garage</string>
    <string name="no_car_name">Some car does not have a name</string>
    <string name="no_licence_plate">Some car does not have a licence plate</string>
    <string name="parking_number">____</string>
    <string name="no_cars_text">There are no cars added</string>
    <string name="no_parking_number">Please, insert the correct parking station number</string>
    <string name="parking">Active Parking</string>
    <string name="licence_plate2">Licence plate: </string>

    //Navigation Drawer
    <string name="title_activity_main_page">MainPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Name</string>
    <string name="nav_header_subtitle">LastName</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    //Menu into Navigation Drawer
    <string name="primary">Primary</string>
    <string name="garage">Garage</string>
    <string name="map">Map</string>

    <string name="delete">DELETE</string>

    <string name="remaining">Time remaining: </string>
    <string name="go_to_garage">Add car</string>
    <string name="cancel">Cancel</string>
    <string name="add_button">Add</string>
    <string name="duplicate_fields">Duplicate name or licence plate</string>
    <string name="updateCar">Save</string>
    <string name="updated">Data updated!</string>
    <string name="existed">Car with input licence plate is already created!</string>
    <string name="deleted">Car has been deleted!</string>
    <string name="save">Save</string>
    <string name="lastName">Last Name</string>
    <string name="stop">Stop</string>
    <string name="is_hint">Hint enabled!</string>
    <string name="permission">Permission</string>
    <string name="no_permission_message">This App needs a permission to provide your automatic SMS sending. In case you do not want the app automatically send and receive messages this function can be disabled in settings. Would you like to give a permission?</string>
    <string name="need_permission_message">The App needs SMS sending permission to provide parking messages automatic sending service. You can turn on manual sending mode in App\'s settings</string>
    <string name="action_about">About App</string>
    <string name="stop_parking">Stop</string>

    <string name="MOS_PARKING">7757</string>
    <string name="warning">Warning</string>
    <string name="payment_difficulties">There were some difficulties regarding your payment. It can be connected with leak of money on parking account or payment confirmation needed. Please, check SMS for more information</string>
    <string name="no_pay_required">No payment required</string>
    <string name="no_pay_message">It is unneeded to pay for parking. Probably, you park in weekends or holiday. Please, check SMS for more information</string>
    <string name="confirmed">Confirmed</string>
    <string name="confirmation_received">Payment confirmation received</string>
    <string name="parking_notification">Parking notification</string>
    <string name="more_than_ten">It is possible to add no more than 10 cars at once</string>
    <string name="end">Parking finished</string>
    <string name="end_message">Parking session has been finished successfully</string>
    <string name="send">SMS</string>
    <string name="send_message">The SMS will be created with text: </string>
    <string name="message_end">will be sent to 7757. In case there are several active sessions the App cannot process them in the right way. If a message with confirmation request received, in case the App would not do it by it\'s own, follow instructions from the message you got.</string>
    <string name="no_sessions">No active sessions</string>
    <string name="no_sessions_message">There are no active parking sessions!</string>
    <string name="proceed">Proceed</string>
    <string name="sent">Message sent! Check system SMS App</string>
    <string name="sms">Automatic SMS processing</string>
    <string name="sms_redirecting">Redirecting to system SMS application</string>
    <string name="help_title">Be aware</string>
    <string name="help_message">In case there are troubles with sending messages process, disable automatic sending in App settings. However, you can provide SMS permission from device settings</string>
    <string name="with_licence_plate">with licence plate</string>
    <string name="is_already_exist">is already exist!</string>
    <string name="vehicle">Vehicle</string>
</resources>