<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ParkingActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/parking"
        android:textSize="30dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_margin="30dp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/licence_plate2"/>

    <LinearLayout
        android:id="@+id/countdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:layout_below="@id/title"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/remaining"
            android:textSize="30sp"/>

        <Chronometer
            android:id="@+id/timer"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textSize="30sp"/>
    </LinearLayout>

    <Button
        android:id="@+id/stop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:layout_alignParentBottom="true"
        android:textColor="#FF5050"
        android:text="@string/stop"
        android:background="@drawable/delete_buttons_shape"/>
</RelativeLayout>