<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/second"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:padding="@dimen/layoutMargin">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_above="@id/name"
        android:layout_margin="@dimen/imageMargin"
        android:src="@drawable/parking"/>

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:hint="@string/name"
        android:maxLength="30"
        android:digits="@string/allowed_chars"
        android:inputType="textPersonName"
        android:textColorHint="@color/textColor"
        android:textColor="@android:color/holo_red_light"
        android:gravity="center"/>

    <Button
        android:id="@+id/datePicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_below="@id/name"
        android:background="@drawable/no_background_buttons_shape"
        android:text="@string/date"
        android:textColor="@color/textColor"/>

    <Button
        android:enabled="false"
        android:id="@+id/next"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layoutMargin"
        android:layout_marginEnd="@dimen/layoutMargin"
        android:layout_alignParentBottom="true"
        android:background="@drawable/buttons_shape"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:text="@string/next"
        android:textColor="@color/inactiveTextColor"/>

    <Button
        android:id="@+id/nextHidden"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layoutMargin"
        android:layout_marginEnd="@dimen/layoutMargin"
        android:layout_alignParentBottom="true"
        android:background="#00FFFFFF"
        android:layout_centerHorizontal="true"/>
</RelativeLayout>