<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="vertical"
    android:background="@drawable/car_shape">

    <RelativeLayout
        android:id="@+id/view_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/delete_icon"
            android:layout_width="@dimen/ic_delete"
            android:layout_height="@dimen/ic_delete"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:src="@android:drawable/ic_menu_delete"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/padd_10"
            android:layout_toLeftOf="@id/delete_icon"
            android:text="@string/delete"
            android:textColor="#fff"
            android:textSize="13dp" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/foreground"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EED220"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/thumbnail"
            android:layout_width="@dimen/thumbnail"
            android:layout_height="@dimen/thumbnail"
            android:layout_marginEnd="@dimen/activity_padding_horizontal"
            android:scaleType="centerCrop"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="60dp"
            android:layout_margin="10dp"
            android:layout_centerVertical="true"
            android:src="@drawable/car"/>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/image"

            android:orientation="vertical">

            <TextView
                android:id="@+id/carName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                android:hint="@string/car_name"
                android:maxLength="20"
                android:gravity="start"
                android:textSize="30sp"
                android:textColor="@android:color/darker_gray"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/licencePlate"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textCapCharacters"
                android:hint="@string/car_id"
                android:maxLength="12"
                android:textSize="20sp"
                android:textColor="@android:color/darker_gray"
                android:gravity="start"/>
        </LinearLayout>

        <TextView
            android:id="@+id/carCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"/>
    </RelativeLayout>
</FrameLayout>