<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="25dp"
    android:orientation="horizontal"
    android:background="@color/background">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/mainLayout"
        android:layout_margin="60dp"
        android:src="@drawable/car"/>

    <RelativeLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/carName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/garage"
            android:inputType="text"
            android:hint="@string/car_name"
            android:maxLength="20"
            android:gravity="center"
            android:textSize="20sp"
            android:background="@drawable/buttons_shape"/>


        <EditText
            android:id="@+id/licencePlate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="10dp"
            android:layout_below="@id/carName"
            android:inputType="textCapCharacters"
            android:hint="А 777 МР 777"
            android:typeface="monospace"
            android:digits="0123456789АВЕКМНОРСТУХ"
            android:maxLength="12"
            android:gravity="center"
            android:background="@drawable/buttons_shape"/>

        <!--Spinner-->
        <RelativeLayout
            android:id="@+id/countriesSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/licencePlate"
            android:paddingEnd="1dp"
            android:paddingStart="1dp"
            android:background="@drawable/spinner_background"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="#A6DFC72B"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/popupBackground"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/drop"/>
        </RelativeLayout>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="1">

        <Button
            android:id="@+id/deleteCar"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="5dp"
            android:text="@string/deleteCar"
            android:textColor="@android:color/holo_red_dark"
            android:background="@drawable/delete_buttons_shape"/>

        <Button
            android:id="@+id/editCar"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/updateCar"
            android:textColor="@android:color/holo_green_light"
            android:background="@drawable/green_buttons_shape"/>
    </LinearLayout>
</RelativeLayout>