<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rootLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainPage"
    android:padding="@dimen/layoutMargin"
    tools:showIn="@layout/app_bar_main_page"
    android:orientation="vertical"
    android:background="@color/colorAccent">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/paymentInterface"
        android:layout_marginBottom="10dp"
        android:text="@string/payment"
        android:textSize="30sp"
        android:textColor="@android:color/holo_green_light"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/paymentInterface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <br.com.sapereaude.maskedEditText.MaskedEditText
            android:id="@+id/parkingID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:gravity="center"
            android:hint="@string/parking_number"
            app:allowed_chars="0123456789"
            android:textColorHint="@color/textColor"
            android:inputType="number"
            android:typeface="monospace"
            android:textColor="@android:color/holo_green_light"
            app:mask="####"
            app:keep_hint="true"/>

        <!--Spinner-->
        <RelativeLayout
            android:id="@+id/carSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingEnd="1dp"
            android:paddingStart="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/spinner_background"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/popupBackground"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/drop"/>
        </RelativeLayout>

        <!--Spinner-->
        <RelativeLayout
            android:id="@+id/hoursSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingEnd="1dp"
            android:paddingStart="1dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/spinner_background"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/spinner2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:layout_marginStart="5dp"
                android:entries="@array/hours"
                android:foregroundGravity="center"
                android:spinnerMode="dropdown"
                android:popupBackground="@color/popupBackground"/>

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_gravity="center"
                android:src="@drawable/drop"/>
        </RelativeLayout>
    </LinearLayout>

    <Button
        android:id="@+id/payButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/avgMargin"
        android:layout_marginEnd="@dimen/avgMargin"
        android:layout_marginTop="@dimen/avgMargin"
        android:layout_marginBottom="15dp"
        android:layout_alignParentBottom="true"
        android:text="@string/manage"
        android:textSize="20sp"
        android:textColor="@android:color/holo_green_light"
        android:background="@drawable/green_buttons_shape"/>
</RelativeLayout>